# provenance-compaction-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: report.py
docs/: cadence-sweep.md  summary-frozen.md  summary-llm-frozen.md  trace-adapters.md  worked-example.md
docs/data/: README.md  llm_gate_metrics.csv  sweep_meta.json  sweep_metrics.csv
examples/audit/: dangerous.yaml  healthy.yaml
examples/traces/: rules.yaml  sample.jsonl
experiments/: config-llm.yaml  config-sweep.yaml  config.matched.yaml  config.yaml
src/provlab/: __init__.py  audit.py  axes.py  cli.py  compaction.py  lineage.py  llm.py  metrics.py  policies.py  replay.py  store.py  trace.py  trajectory.py
tests/: conftest.py  test_analytics.py  test_audit.py  test_axes.py  test_determinism.py  test_gates.py  test_invariants.py  test_lineage.py  test_prose.py  test_replay_directions.py  test_store.py  test_trace.py
